...

  const animatedContainerStyle = useAnimatedStyle(() => ({
    transform: [{ scale: scale.value }],
  }));

  return (
    <Pressable testID="capture-thumbnail" onPress={onPress} style={styles.wrapper}>
      {!isCapturing && !latestCapturedUri ? (
        <View style={styles.placeholder} />
      ) : (
        <Animated.View style={[styles.container, animatedContainerStyle]}>
          {isCapturing ? (
            <Animated.View style={[styles.spinnerContainer, animatedSpinnerStyle]}>
...
